Navigation z-index issue

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -26,6 +26,10 @@
             margin-left: 0;
         }
     }
+
+    [data-widget-type="extendednavigation"] {
+        z-index: 10004;
+    }
     
     
     &.edit .template-header {
